src/test/test-models/bad/err-second-operand-plus.stan
transformed data {
  int n;
  n <- 3 ||
}
model {
}
